fixed overflow issue of task-container

--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $montserrat: "Montserrat", sans-serif;
 
 * {
   font-family: $montserrat;
+  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
@@ -10,7 +11,8 @@ $montserrat: "Montserrat", sans-serif;
 
 body {
   max-width: 700px;
-  height: 100vh;
+  height: 100svh;
+  overflow: hidden;
   margin-inline: auto;
   // background-image: url("./Assets/background.svg");
   background-image: linear-gradient(45deg, #568fa9, rgb(53, 72, 127));
@@ -36,6 +38,10 @@ nav {
 }
 
 .recent-tasks-section {
+  overflow-y: scroll;
+  // border: 2px solid red;
+  height: 65svh;
+
   ul {
     li {
       background-color: white;
@@ -82,5 +88,8 @@ nav {
 @media screen and (width<767px) {
   nav {
     margin-top: 0rem;
+  }
+  .recent-tasks-section {
+    height: 80svh;
   }
 }
